apps/pbs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-pbs
  namespace: pbs
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8007
      targetPort: 8007
