apps/pbs/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-pbs-slice
  namespace: pbs
  labels:
    kubernetes.io/service-name: external-pbs
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8007
endpoints:
  - addresses:
      - "192.168.31.205"
    conditions:
      ready: true
